--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,13 @@
+# IDEA
+*.iml
+.gradle
+.idea
+/local.properties
+.DS_Store
+
+# ---> dolin zap log framework
+*.zap
+
 # ---> Android
 # Built application files
 *.apk
@@ -31,4 +41,3 @@ proguard/
 
 # Android Studio captures folder
 captures/
-
