--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,8 @@ apply from: "config.gradle"
 buildscript {
     ext {
         kotlin_version = '1.6.0'
-        compose_version = '1.0.5'
+        coroutines_version = '1.5.2'
+        compose_version = '1.1.0-rc01'
     }
     repositories {
         google()
@@ -12,6 +13,15 @@ buildscript {
         jcenter()
         maven { url 'https://maven.aliyun.com/repository/public' }
         maven { url 'https://jitpack.io' }
+    }
+    allprojects {
+        repositories {
+            google()
+            mavenCentral()
+            jcenter()
+            maven { url 'https://maven.aliyun.com/repository/public' }
+            maven { url 'https://jitpack.io' }
+        }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:7.0.2'
