--- a/config.gradle
+++ b/config.gradle
@@ -10,7 +10,7 @@ ext {
 
     ktx = [
             stdlib         : "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version",
-            coroutines     : "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.0",
+            coroutines     : "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutines_version",
             core           : "androidx.core:core-ktx:1.6.0",
             legacySupportV4: "androidx.legacy:legacy-support-v4:1.0.0"
     ]
@@ -30,20 +30,6 @@ ext {
             extension: "androidx.lifecycle:lifecycle-extensions:2.2.0",
             activity : "androidx.activity:activity-ktx:1.4.0",
             fragment : "androidx.fragment:fragment-ktx:1.4.0"
-    ]
-
-    net = [
-            retrofit   : "com.squareup.retrofit2:retrofit:2.9.0",
-            converter  : "com.squareup.retrofit2:converter-gson:2.9.0",
-            okhttp     : "com.squareup.okhttp3:okhttp:4.9.0",
-            gson       : "com.google.code.gson:gson:2.8.6",
-            glide      : "com.github.bumptech.glide:glide:4.12.0",
-            integration: "com.github.bumptech.glide:okhttp3-integration:4.12.0"
-    ]
-
-    other = [
-            zap                  : "io.github.suyghur.dolin:zap:1.0.0",
-            mmkv                 : "com.tencent:mmkv-static:1.2.10",
     ]
 
     ktxLibs = ktx.values()
